flux/clusters/natsume/apps/tempo/ingress-tempo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo
  namespace: tempo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
    traefik.ingress.kubernetes.io/router.tls.options: cert-manager-pke-natsume-mtls@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: tempo.pstr.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tempo
            port:
              number: 3200
  tls:
  - hosts:
    - tempo.pstr.space
    secretName: tempo.pstr.space-http01
